# depbank

./: .gitignore  Cargo.toml  README.md  USAGE.md  deny.toml
.memory_bank/: activeContext.md  progress.md  projectbrief.md  refactoring-plan.md  systemPatterns.md  tasks.md  techContext.md
fixtures/complex_project/: Cargo.toml
fixtures/complex_project/src/: main.rs
fixtures/custom_registry_project/: Cargo.toml
fixtures/empty_project/: Cargo.toml
fixtures/simple_project/: Cargo.toml
fixtures/simple_project/src/: main.rs
fixtures/workspace_project/: Cargo.toml
fixtures/workspace_project/core/: Cargo.toml
fixtures/workspace_project/core/src/: lib.rs
fixtures/workspace_project/utils/: Cargo.toml
fixtures/workspace_project/utils/src/: lib.rs
specs/: 0001-idea.md  instructions.md
src/: cli.rs  lib.rs  main.rs  utils.rs
tests/: cli_integration.rs
